--- a/app/src/main/res/layout/fragment_foundation_donates.xml
+++ b/app/src/main/res/layout/fragment_foundation_donates.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/foundationBck"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layout_container">
@@ -7,6 +8,7 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 
     <include layout="@layout/foundation_donate_header"/>
 
