--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,12 +1,49 @@
-
 <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/homeLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="#fff"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tvExplore"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="Explore"
+        android:textColor="@color/blueLottery"
+        android:textSize="15sp" />
+
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:id="@+id/searchBtn"
+        android:src="@drawable/magnifier"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:id="@+id/blueLine"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/tvExplore"
+        android:background="@drawable/keyline">
+    </View>
+
+    <GridView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SEARCH"/>
+        android:id="@+id/gvFounds"
+        android:verticalSpacing="1dp"
+        android:horizontalSpacing="1dp"
+        android:layout_below="@+id/blueLine"
+        android:layout_marginTop="10dp"
+        android:background="@color/lightgrey"
+        android:numColumns="2"/>
 </RelativeLayout>
