--- a/app/src/main/res/layout/activity_delete_dialog.xml
+++ b/app/src/main/res/layout/activity_delete_dialog.xml
@@ -26,6 +26,7 @@
         android:layout_height="90dp"
         android:gravity="center"
         android:text="Are you sure want to delete your comment?"
+        android:id="@+id/tvAreYouSure"
         android:textColor="@color/black"
         android:textSize="20sp" />
 
