--- a/app/src/main/res/layout/profile_donate_header.xml
+++ b/app/src/main/res/layout/profile_donate_header.xml
@@ -10,6 +10,15 @@
     <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="300dp">
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/circle"
+            android:id="@+id/settingsIv"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="25dp"
