--- a/app/src/main/res/layout/foundation_donate_header.xml
+++ b/app/src/main/res/layout/foundation_donate_header.xml
@@ -13,7 +13,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/found_image"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="25dp"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_centerHorizontal="true"
@@ -27,6 +27,7 @@
             android:textColor="#00f"
             android:textSize="20dp"
             android:text="Full Name"
+            android:layout_marginTop="20dp"
             android:id="@+id/fullName"
             android:layout_below="@+id/found_image"
             android:layout_centerHorizontal="true"/>
@@ -90,7 +91,7 @@
                 android:layout_height="20dp"
                 android:layout_weight="6"
                 android:id="@+id/smallImage2"
-                android:src="@drawable/badges_icn" />
+                android:src="@drawable/shape_30" />
            <View
                 android:layout_width="0dp"
                 android:background="@color/transparent"
@@ -101,7 +102,7 @@
                 android:layout_height="20dp"
                 android:layout_weight="6"
                 android:id="@+id/smallImage3"
-                android:src="@drawable/badges_icn" />
+                android:src="@drawable/tag_icn_grey" />
 
             <View
                 android:layout_width="0dp"
