--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,7 +13,7 @@
         android:paddingLeft="48dp"
         android:paddingBottom="15dp"
         android:hint="Email"
-        android:text="costa@programmer.net"
+        android:text="Merik_spb@mail.ru"
         android:id="@+id/email"
         android:layout_alignParentTop="true" />
     
@@ -36,7 +36,7 @@
         android:layout_height="72dp"
         android:inputType="textPassword"
         android:ems="10"
-        android:text="oifIlR"
+        android:text="123123"
         android:paddingLeft="48dp"
 
         android:hint="Password"
