--- a/app/src/main/res/layout/notification_item_for_lv.xml
+++ b/app/src/main/res/layout/notification_item_for_lv.xml
@@ -48,9 +48,9 @@
         android:layout_toRightOf="@+id/ivUser"
         android:layout_toEndOf="@+id/ivUser" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/imNotification"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true" />
