--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/header_hight"
+        android:layout_height="@dimen/header_height"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -27,8 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/header_hight"
-        android:paddingTop="@dimen/header_hight">
+        android:paddingBottom="@dimen/header_height"
+        android:paddingTop="@dimen/header_height">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -248,7 +248,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/button_hight"
+        android:layout_height="@dimen/button_height"
         android:layout_alignParentBottom="true"
         android:background="@color/grey"
         android:onClick="next">
