--- a/app/src/main/res/layout/activity_lottery.xml
+++ b/app/src/main/res/layout/activity_lottery.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/header_hight"
+        android:layout_height="@dimen/header_height"
         android:background="@color/white">
 
         <ImageView
