--- a/app/src/main/res/layout/activity_make_don.xml
+++ b/app/src/main/res/layout/activity_make_don.xml
@@ -148,7 +148,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/button_hight"
+        android:layout_height="@dimen/button_height"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@color/grey"
