--- a/app/src/main/res/layout/fragment_follow.xml
+++ b/app/src/main/res/layout/fragment_follow.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:weightSum="99"
-        android:layout_height="@dimen/header_hight">
+        android:layout_height="@dimen/header_height">
 
         <RelativeLayout
             android:layout_width="0dp"
