--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/header_hight"
+        android:layout_height="@dimen/header_height"
         android:orientation="horizontal"
         android:weightSum="100">
 
@@ -62,7 +62,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tvNoNotifications"
@@ -73,10 +73,18 @@
             android:textColor="@color/grey"
             android:textSize="15sp" />
 
+        <!-- for bottom bar-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/bottom_bar_height"
+            android:id="@+id/emptyView"
+            android:layout_alignParentBottom="true"/>
+
         <ListView
             android:id="@+id/lvNotifications"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent"
+            android:layout_above="@id/emptyView"/>
     </RelativeLayout>
 
 </LinearLayout>
