--- a/app/src/main/res/layout/fragment_one_post.xml
+++ b/app/src/main/res/layout/fragment_one_post.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cm.com.newdon.LotteryListActivity">
+    android:background="@color/white"
+    tools:context="cm.com.newdon.fragments.OnePostFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:textColor="@color/lightBlue"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="Lottery History">
+            android:text="Explore">
         </TextView>
 
         <View
@@ -28,13 +28,15 @@
             android:layout_alignParentBottom="true"
             android:background="@drawable/keyline">
         </View>
+
+        <ImageView
+            android:layout_width="28dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/shape_22"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="26dp"
+            android:id="@+id/backBtn"/>
     </RelativeLayout>
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@color/white"
-        android:id="@+id/lvLotteryHistory">
-
-    </ListView>
 </LinearLayout>
