--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="header_hight">65.3dp</dimen>
-    <dimen name="button_hight">80dp</dimen>
+    <dimen name="header_height">65.3dp</dimen>
+    <dimen name="button_height">80dp</dimen>
+    <dimen name="bottom_bar_height">64dp</dimen>
 </resources>
