--- a/app/src/main/res/layout/activity_bottombar.xml
+++ b/app/src/main/res/layout/activity_bottombar.xml
@@ -13,7 +13,7 @@
         <FrameLayout
             android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></FrameLayout>
+            android:layout_height="match_parent"/>
 
         <com.roughike.bottombar.BottomBar
             android:id="@+id/bottomBar"
@@ -91,6 +91,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:background="@color/white"
+            android:onClick="shareDonation"
             android:layout_height="match_parent"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
