--- a/app/src/main/res/layout/profile_donate_header.xml
+++ b/app/src/main/res/layout/profile_donate_header.xml
@@ -61,6 +61,18 @@
             android:layout_marginTop="10dp"
             android:id="@+id/edit_btn"
             />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/follow_btn1"
+            android:visibility="invisible"
+            android:layout_toEndOf="@+id/profile_image"
+            android:layout_toRightOf="@+id/profile_image"
+            android:layout_alignTop="@+id/profile_image"
+            android:layout_marginLeft="-25dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/follow_btn"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="25dp"
