--- a/app/src/main/res/layout/sign_acitvity.xml
+++ b/app/src/main/res/layout/sign_acitvity.xml
@@ -15,6 +15,8 @@
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/logo"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="15dp"
         android:src="@drawable/logo"/>
 
     <cm.com.newdon.classes.SlidingTabLayout
