--- a/app/src/main/res/layout/suggested_connection_item.xml
+++ b/app/src/main/res/layout/suggested_connection_item.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/lightBlue"
+        android:textColor="@color/grey"
         android:text="Name"
         android:textSize="17sp"
         android:id="@+id/tvUserMail"
