--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,9 @@
         <item name="android:paddingTop">20sp</item>
         <item name="android:paddingBottom">20sp</item>
     </style>
+    <style name="dividedListStyle" parent="@android:style/Widget.ListView">
+        <item name="android:cacheColorHint">@android:color/transparent</item>
+        <item name="android:divider">@drawable/keyline</item>
+        <item name="android:dividerHeight">0dp</item>
+    </style>
 </resources>
