--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,9 +26,10 @@
     </RelativeLayout>
 
     <ListView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/lvPosts"
-    android:layout_gravity="center_horizontal" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvPosts"
+        android:divider="@null"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
