--- a/app/src/main/res/layout/foundation.xml
+++ b/app/src/main/res/layout/foundation.xml
@@ -5,7 +5,8 @@
     android:padding="5dp"
     android:background="@color/white">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:id="@+id/imFoundLogo"
