--- a/app/src/main/res/layout/foundation_donate_header.xml
+++ b/app/src/main/res/layout/foundation_donate_header.xml
@@ -21,6 +21,18 @@
             android:src="@drawable/layer_5"
             app:civ_border_width="3dp"
             app:civ_border_color="@color/foundationBorder"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/follow_found"
+            android:layout_toEndOf="@+id/found_image"
+            android:layout_toRightOf="@+id/found_image"
+            android:layout_alignTop="@+id/found_image"
+            android:layout_marginLeft="-25dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/followFound"
+            />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="25dp"
