--- a/app/src/main/res/layout/foundation_donate_header.xml
+++ b/app/src/main/res/layout/foundation_donate_header.xml
@@ -43,23 +43,46 @@
             android:id="@+id/fullName"
             android:layout_below="@+id/found_image"
             android:layout_centerHorizontal="true"/>
-        <TextView
-            android:layout_width="wrap_content"
+        <View
+            android:layout_width="2dp"
             android:layout_height="25dp"
-            android:textColor="#00f"
-            android:textSize="20dp"
-            android:text="Follow"
-            android:id="@+id/follow"
             android:layout_below="@+id/fullName"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:background="@color/blueLottery"
+            android:id="@+id/follCenter"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:textColor="#00f"
+            android:textColor="@color/blueLottery"
             android:textSize="20dp"
             android:text="2 donates"
-            android:id="@+id/donations"
-            android:layout_below="@+id/follow"
+            android:id="@+id/following"
+            android:layout_below="@+id/fullName"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/follCenter"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:textColor="@color/blueLottery"
+            android:textSize="20dp"
+            android:text="2 donates"
+            android:id="@+id/followers"
+            android:layout_below="@+id/fullName"
+            android:layout_marginRight="5dp"
+            android:layout_toLeftOf="@+id/follCenter" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:textColor="#fff"
+            android:textSize="20dp"
+            android:text="type"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:background="@drawable/tv_round_bck"
+            android:id="@+id/tvCategory"
+            android:layout_below="@+id/follCenter"
             android:layout_centerHorizontal="true"/>
         <ImageView
             android:layout_width="match_parent"
@@ -69,7 +92,7 @@
             android:layout_centerHorizontal="true"
             android:src="@drawable/line"
             android:id="@+id/niceLine"
-            android:layout_below="@+id/donations"/>
+            android:layout_below="@+id/tvCategory"/>
 
         <LinearLayout
             android:layout_width="match_parent"
