--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -191,8 +191,16 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:text="0 donated"
+            android:clickable="true"
             android:textAlignment="center"
             android:textColor="@color/black" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/keyline"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="2dp"/>
     </RelativeLayout>
 
 </RelativeLayout>
